SVN
-------
New Features
^^^^^^^^^^^^
  * A simple animation system has been added that allows widgets to move over time using linear interpolation.
  * The Video widget can now also play the audio from a video file if play_audio=True.
  * FontSize on labels is now themeable.
Bugs Fixed
^^^^^^^^^^

Other Stuff
^^^^^^^^^^^
  * The themeing interface has been updated to simplify access to theme options.
  * System is now a subclass of Widget to simplify code and reduce code duplication.
  * Bgui now uses weakrefs to break dependency cycles and allow Python's GC to clean up widgets. This should solve most memory leak problems with Bgui.

0.06
-------
New Features
^^^^^^^^^^^^
  * Multiple Image widgets can reuse the same image file for efficiency (thanks to andrew-101)
  * ListBox widget
  * Image.texco is now exposed allowing for UV coordinates to be changed (thanks to jplur)

Bugs Fixed
^^^^^^^^^^
  * Images would loose their "on_hover" when they were clicked on
  * When removing a widget, that widget's cleanup method is now also run
  * Issue 3: Positioning of TextBlock is off when not passing BGUI_NORMALIZED

Other Stuff
^^^^^^^^^^^
  * Various TextInput improvements (thanks to jplur and Gomer)
  * Updated demo (thanks to jplur)
  * Moving or resizing a widget now affects it's children

0.05
----
New Features
^^^^^^^^^^^^
  * ProgressBar widget (thanks to andrew-101)
  * Widgets now support sub-themes (similar to CSS classes)
  * Widgets now have an aspect option to lock the aspect ratio of the widget
  * Widgets can now be "frozen" with the frozen property (thanks to Kupoman)
  * Themeing supoprt and color property added to FrameButton (thanks to Kupoman)
  * Newline (\n) support added to TextBlock widgets
  * Overflow options added to TextBlock widgets (thanks to Gomer)
  * Support for a "prefix" added to TextInput widgets via a prefix property (thanks to Gomer)  
  * on_enter callback added to TextInput widgets 

Bugs Fixed
^^^^^^^^^^