@@ -173,6 +173,18 @@
 <dd><p>The widget&#8217;s position</p>
 </dd></dl>
 
+<dl class="method">
+<dt id="bgui.text_input.TextInput.select_all">
+<tt class="descname">select_all</tt><big>(</big><big>)</big><a class="headerlink" href="#bgui.text_input.TextInput.select_all" title="Permalink to this definition">¶</a></dt>
+<dd><p>Change the selection to include all of the text</p>
+</dd></dl>
+
+<dl class="method">
+<dt id="bgui.text_input.TextInput.select_none">
+<tt class="descname">select_none</tt><big>(</big><big>)</big><a class="headerlink" href="#bgui.text_input.TextInput.select_none" title="Permalink to this definition">¶</a></dt>
+<dd><p>Change the selection to include none of the text</p>
+</dd></dl>
+
 <dl class="attribute">
 <dt id="bgui.text_input.TextInput.size">
 <tt class="descname">size</tt><a class="headerlink" href="#bgui.text_input.TextInput.size" title="Permalink to this definition">¶</a></dt>
