@@ -61,11 +61,18 @@
 <li>A simple animation system has been added that allows widgets to move over time using linear interpolation.</li>
 <li>The Video widget can now also play the audio from a video file if play_audio=True.</li>
 <li>FontSize on labels is now themeable.</li>
+<li>Two new utility functions for TextInput: select_all() and select_none(). (thanks to jplur)</li>
 </ul>
 </div></blockquote>
 </div>
 <div class="section" id="bugs-fixed">
 <h3>Bugs Fixed<a class="headerlink" href="#bugs-fixed" title="Permalink to this headline">¶</a></h3>
+<blockquote>
+<div><ul class="simple">
+<li>The system&#8217;s size now updates if the viewport size changes.</li>
+<li>Issue 11: Externally resetting text input contents breaks selection. (thanks to jplur)</li>
+</ul>
+</div></blockquote>
 </div>
 <div class="section" id="other-stuff">
 <h3>Other Stuff<a class="headerlink" href="#other-stuff" title="Permalink to this headline">¶</a></h3>
