@@ -729,6 +729,16 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
+  <dt><a href="api/text_input.html#bgui.text_input.TextInput.select_all">select_all() (bgui.text_input.TextInput method)</a>
+  </dt>
+
+      
+  <dt><a href="api/text_input.html#bgui.text_input.TextInput.select_none">select_none() (bgui.text_input.TextInput method)</a>
+  </dt>
+
+  </dl></td>
+  <td style="width: 33%" valign="top"><dl>
+      
   <dt><a href="api/frame.html#bgui.frame.Frame.size">size (bgui.frame.Frame attribute)</a>
   </dt>
 
@@ -774,8 +784,6 @@
   </dt>
 
       </dl></dd>
-  </dl></td>
-  <td style="width: 33%" valign="top"><dl>
       
   <dt><a href="api/system.html#bgui.system.System">System (class in bgui.system)</a>
   </dt>
